tests/rosetta/out/Haskell/bioinformatics-global-alignment.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-global-alignment.hs:187:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-global-alignment.hs:180:1
                 /workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-global-alignment.hs:187:1
    |
187 | main = do
    | ^^^^
